# PayloadArsenal-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  categories.py  config.py  indexing.py  paths.py  provenance.py  pyproject.toml  readers.py  references.py  requirements-dev.txt  requirements.txt  responses.py  schemas.py  search.py  server.py  service.py  wordlists.py
.github/workflows/: ci.yml
config/: collections.json
scripts/: build_index.py  check_index.py  docker_mcp_smoke.py  fetch_collections.py
tests/: conftest.py  test_discovery.py  test_mcp_integration.py  test_paths.py  test_readers.py  test_responses_config.py  test_schemas_service.py  test_search.py
