[project]
name = "payload-arsenal-mcp"
version = "1.0.0"
description = "Read-only Model Context Protocol retrieval server for local security reference collections"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "mcp==1.28.1",
  "pydantic==2.13.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["arsenal"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
